--- a/index.html
+++ b/index.html
@@ -2,16 +2,44 @@
 
 <html>
 	<head>
-	<J.M. Ramirez Web Page>
+	<meta charset="utf-8">
+	<title> J.M. Ramirez Web Page </title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
 	<body>
-		<div>
-		</div>
 
-		<div>
-			<h1> Juan Marcos Ramírez Rondón </h1>
+	<div class="image_ppal">
+		<div class="menu">
+			<ul>
+				<li> <a href="index.html"> Home </a> </li>
+				<li> Teaching </li>
+				<li> <a href="publications.html">Publications</a> </li>
+				<li> Talks </li>
+				<li> <a href="codes.html">Codes</a> </li>		
+			</ul>
 		</div>
+		<h1> Welcome </h1>
+	</div>
+
+
+		<center>
+		<div>
+			<h1> Homepage of Juan Marcos Ramírez</h1>
+		</div>
+		</center>
+
+			<h2> Short Bio </h2>
+			<p> Juan Marcos Ramírez was born in Mérida, Venezuela. He received the Diploma in electrical engineering from the Universidad de Los Andes, Mérida, in 2002, and the M.S. degree in biomedical engineering in 2007. He is currently working toward the Doctor degree with the Applied Sciences Program, Engineering Faculty, Universidad de Los Andes. From 2004, he has been Professor with the Electrical Engineering Department, Universidad de Los Andes. </p>
+
+			<h2> Research interest </h2>
+			<ul>
+				<li> Robust Sparse Signal Reconstruction Algorithms </li>
+				<li> Robust Filtering </li>
+				<li> Image Denoising and Image Inpainting </li>		
+			</ul>
+		
 
 	</body>
 </html>
