--- a/codes.html
+++ b/codes.html
@@ -32,8 +32,8 @@
 
 			<h2> Reproducible Research </h2>
 			<ul>
-				<li> Recursive Weighted Myriad Based Filters and their Optimizations. <a href="https://github.com/JuanMarcosRamirez/RecursiveMyriadBasedFilters"> matlab codes </a> </li>
-				<li> Robust Sparse Signal Recovery based on Weighted Median Operator <a href="https://github.com/JuanMarcosRamirez/SparseRecoveryWeightedMedian"> C-codes</a> </li>
+				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Weighted Myriad Based Filters and their Optimizations", IEEE Transactions on Signal Processing, vol.64, No. 15, pp. 4027-4039, Aug, 2016. <a href="https://github.com/JuanMarcosRamirez/RecursiveMyriadBasedFilters"> matlab codes </a> </li>
+				<li> Juan Ramírez and Jose Luis Paredes, "Robust Sparse Signal Recovery based on Weighted Median Operator", Proceedings of International Conference on Acoustic, Speech, and Signal Processing (ICASSP 2014), Florence, Italy, vol II, pp. 1050-1054, May 2014. <a href="https://github.com/JuanMarcosRamirez/SparseRecoveryWeightedMedian"> C-codes</a> </li>
 			</ul>
 		
 
