--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@
 				<li> <a href="index.html"> Home </a> </li>
 				<li> Teaching </li>
 				<li> <a href="publications.html">Publications</a> </li>
-				<li> Talks </li>
+				<li> <a href="talks.html"> Talks </a> </li>
 				<li> <a href="codes.html">Codes</a> </li>		
 			</ul>
 		</div>
