--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 				<li> Teaching </li>
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
-				<li> <a href="codes.html">Codes</a> </li>		
+				<li> <a href="codes.html">Codes</a> </li>
+				<li> Contacts </li>		
 			</ul>
 		</div>
-		<h1> Welcome </h1>
+<!--		<h1> Welcome </h1> -->
 	</div>
 
 
