--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<h2> Research interest </h2>
 			<ul>
 				<li> Spectral Image Classification from Compressive Measurements </li>
-				<li> Multi-shot seismic Wavefield Recovery </li>	
+				<li> Multi-shot Seismic Wavefield Recovery </li>	
 				<li> Robust Sparse Signal Reconstruction Algorithms </li>
 				<li> Robust Filtering </li>
 				<li> Image Denoising and Image Inpainting </li>		
