--- a/publications.html
+++ b/publications.html
@@ -17,10 +17,10 @@
 				<li> Teaching </li>
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
-				<li> <a href="codes.html">Codes</a> </li>		
+				<li> <a href="codes.html">Codes</a> </li>
+				<li> Contacts </li>		
 			</ul>
 		</div>
-		<h1> Welcome </h1>
 	</div>
 
 
@@ -31,16 +31,30 @@
 		</center>
 
 			<h2> Journal Papers </h2>
+			<div class="pubitem">
 			<ul>
-				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Myriad-Mean Filters: Adaptive Algorithms and Applications", Signal Processing, vol. 139, No 1, pp. 12-24, Oct, 2017. </li>
-				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Weighted Myriad Based Filters and their Optimizations", IEEE Transactions on Signal Processing, vol.64, No. 15, pp. 4027-4039, Aug, 2016. </li>
-				<li> Juan Ramírez and Jose Luis Paredes, "Robust Transforms Based on the Weighted Median Operator", IEEE Signal Processing Letters, vol. 22, No. 1, pp. 120-124, Jan, 2015. </li>
-				<li> Juan Ramírez, Franklin Moreno and Rubén Medina, “Analysis of Swing Time Series in the Gait of Parkinson Patients (Análisis de la Serie Temporal del Balanceo en la Marcha de Pacientes con Parkinson)” Universidad, Ciencia y Tecnología, vol. 10, No. 40, pp. 205-201, Sep, 2006. </li>
-				<li> José Paredes, Juan Ramírez, Giorgio Bianchi, “Median Based Robust Normalization Methods of cDNA Microarray Data (Métodos Robustos de Normalización de Datos de Microarreglos de ADNc Basados en la Mediana)” Ciencia e Ingeniería, vol. 27, No. 2, pp. 89-97, Apr, 2006. </li>
+				<li> Hector Vargas, Juan Ramirez, and Henry Arguello. "ADMM-based ℓ1− ℓ1 optimization algorithm for robust sparse channel estimation in OFDM systems." Signal Processing, vol. 167, Feb, 2020. (<a href="https://doi.org/10.1016/j.sigpro.2019.107296">link</a>). </li>
+				<li> Crisostomo Barajas-Solano,, Juan Ramirez, and Henry Arguello. "Convolutional sparse coding framework for compressive spectral imaging." Journal of Visual Communication and Image Representation, vol. 66, Jan 2020. (<a href="https://www.sciencedirect.com/science/article/pii/S1047320319303116">link</a>). </li>
+				<li> Juan Ramirez and Henry Arguello, "Spectral Image Classification From Multi-Sensor Compressive Measurements," IEEE Transactions on Geoscience and Remote Sensing, vol. 58, no. 1, pp. 626-636, Jan. 2020. (<a href="https://ieeexplore.ieee.org/abstract/document/8851409">link</a>). </li>
+				<li> Juan Ramirez and Henry Arguello, "Multiresolution Compressive Feature Fusion for Spectral Image Classification," IEEE Transactions on Geoscience and Remote Sensing, vol. 57, no. 12, pp. 9900-9911, Dec. 2019. (<a href="https://ieeexplore.ieee.org/abstract/document/8809355">link</a>) </li>
+				<li> Yánez-Sánchez, N. A., Ramírez, J. M., Paredes, J. L., Pinto, A. D., Torres, J. M., and Perez, M. L. "Robust channel estimation for ultra-wide band communications." Revista Ingenierías Universidad de Medellín vol. 18.34, Jun. 2019, pp. 181-197. (<a href="http://www.scielo.org.co/pdf/rium/v18n34/1692-3324-rium-18-34-181.pdf">pdf</a>) </li>
+				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Myriad-Mean Filters: Adaptive Algorithms and Applications", Signal Processing, vol. 139, No 1, pp. 12-24, Oct, 2017 (<a href="https://doi.org/10.1016/j.sigpro.2017.03.031">link</a>). </li>
+				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Weighted Myriad Based Filters and their Optimizations", IEEE Transactions on Signal Processing, vol.64, No. 15, pp. 4027-4039, Aug, 2016. (<a href="https://ieeexplore.ieee.org/abstract/document/7457715">link</a>). (<a href="https://github.com/JuanMarcosRamirez/RecursiveMyriadBasedFilters">codes</a>). </li>
+				<li> Juan Ramírez and Jose Luis Paredes, "Robust Transforms Based on the Weighted Median Operator", IEEE Signal Processing Letters, vol. 22, No. 1, pp. 120-124, Jan, 2015. (<a href="https://ieeexplore.ieee.org/document/6880779">link</a>). </li>
+				<li> Juan Ramírez, Franklin Moreno and Rubén Medina, “Analysis of Swing Time Series in the Gait of Parkinson Patients (Análisis de la Serie Temporal del Balanceo en la Marcha de Pacientes con Parkinson)” Universidad, Ciencia y Tecnología, vol. 10, No. 40, pp. 205-201, Sep, 2006. (<a href="https://www.researchgate.net/profile/Juan_Ramirez35/publication/309732568_ANALYSIS_OF_SWING_TIME_SERIES_IN_THE_GAIT_OF_PARKINSON_PATIENTS/links/5820633a08ae40da2cb4e113.pdf">pdf</a>). </li>
+				<li> José Paredes, Juan Ramírez, Giorgio Bianchi, “Median Based Robust Normalization Methods of cDNA Microarray Data (Métodos Robustos de Normalización de Datos de Microarreglos de ADNc Basados en la Mediana)” Ciencia e Ingeniería, vol. 27, No. 2, pp. 89-97, Apr, 2006. (<a href="https://www.redalyc.org/pdf/5075/507550778006.pdf">pdf</a>). </li>
 			</ul>
+			</div>
+
 
 			<h2> Conference Papers </h2>
+			<div class="pubitem">
 			<ul>
+				<li> Jhon Pinto, Juan Ramírez, and Henry Arguello. "Classification of oil palm diseases via spectral unmixing and convolutional neural networks." Remote Sensing for Agriculture, Ecosystems, and Hydrology XXI. Vol. 11149. International Society for Optics and Photonics, Oct. 2019. (<a href="https://doi.org/10.1117/12.2533351">link</a>). </li>
+				<li> Carlos Hinojosa, Juan Ramirez, and Henry Arguello, "Spectral-Spatial Classification from Multi-Sensor Compressive Measurements Using Superpixels," 2019 IEEE International Conference on Image Processing (ICIP), Taipei, Taiwan, 2019, pp. 3143-3147. (<a href="https://ieeexplore.ieee.org/abstract/document/8803266">link</a>) </li>
+				<li>  Kareth López, Juan Ramírez, William Agudelo, and Henry Arguello, "Regular Multi-Shot Subsampling and Reconstruction on 3D Orthogonal Symmetric Seismic Grids via Compressive Sensing," 2019 XXII Symposium on Image, Signal Processing and Artificial Vision (STSIVA), Bucaramanga, Colombia, 2019, pp. 1-5. (<a href="https://ieeexplore.ieee.org/abstract/document/8730279">link</a>)</li>
+				<li> Crisostomo Barajas-Solano, Juan Ramirez, Hans Garcia, and Henry Arguello, "Tridimensional Convolutional Sparse Coding of Spectral Images," in Optical Sensors and Sensing Congress (ES, FTS, HISE, Sensors), OSA Technical Digest (Optical Society of America, 2019), paper HTu3B.5. (<a href="https://www.osapublishing.org/abstract.cfm?uri=HISE-2019-HTu3B.5">link</a>) </li>
+				<li> Liliana Bautista and Juan Ramirez. "Filtrado 2D de Imágenes Médicas Basado en Filtros Myriad Ponderados Recursivos." Quinta Conferencia Nacional de Computación, Informática y Sistemas (CoNCISa 2017), Universidad Católica Andrés Bello, Ciudad Guayana, Venezuela, Oct. 2017 (<a href="http://concisa.net.ve/memorias/CoNCISa2017/CoNCISa2017-p049-059.pdf">pdf</a>) </li>
 				<li> Liliana Bautista, Hugo Reyes, María Delgado and Juan Ramírez, “Robust Image Filtering Based on Myriad Optimized Structures (Filtrado Robusto de Imágenes con Estructuras Optimizadas Basadas en Myriad)”, Tercera Conferencia Nacional de Computación, Informática y Sistemas (CONCISA 2015), Valencia, Venezuela, pp. 286-290, Oct, 2015.</li>
 				<li> Juan Ramírez and Jose Luis Paredes, "Robust Sparse Signal Recovery based on Weighted Median Operator", Proceedings of International Conference on Acoustic, Speech, and Signal Processing (ICASSP 2014), Florence, Italy, vol II, pp. 1050-1054, May 2014.</li>
 				<li>Jesús Lacruz, Juan Ramírez, and Jose Luis Paredes, "Robust Sparse Channel Estimation for OFDM System using an Iterative Algorithm Based on Complex Median", Proceedings of International Conference on Acoustic, Speech, and Signal Processing (ICASSP 2014), Florence, Italy, pp. 6429-6433, May 2014. </li>
@@ -54,7 +68,7 @@
 				<li> José Paredes, Juan Ramírez, Giorgio Bianchi, María Rodríguez, “Robust Normalization of cDNA Microarrays (Normalización Robusta de Microarreglos de ADN)” II Congreso Iberoamericano de Estudiantes de Ingeniería Eléctrica (II CIBELEC 2006), Puerto La Cruz, Venezuela, Apr, 2006.</li>
 				<li> Juan Ramírez and José Paredes, “Linear Regression Based on the Sample Myriad (Regresión Lineal Basada en Myriad Muestral)” VIII Congreso Internacional de Métodos Numéricos en Ingeniería y Ciencias Aplicadas (CIMENICS 2006), Isla de Margarita, Venezuela, Mar, 2006. </li>
 			</ul>
-		
+		  </div>
 
 	</body>
 </html>
