--- a/codes.html
+++ b/codes.html
@@ -24,6 +24,10 @@
 	</div>
 
 
+	<div class="row">
+	<div class="column left">
+  	</div>
+	<div class="column middle">
 		<center>
 		<div>
 			<h1> Codes</h1>
@@ -31,10 +35,28 @@
 		</center>
 
 			<h2> Reproducible Research </h2>
+			<h3> Recursive Weighted Myriad Filters </h3>
+
+			<center>
+				<img src="ChirpRWMyF.jpg" alt="Chirp processing" width="400">
+			</center>
 			<ul>
 				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Weighted Myriad Based Filters and their Optimizations", IEEE Transactions on Signal Processing, vol.64, No. 15, pp. 4027-4039, Aug, 2016. <a href="https://github.com/JuanMarcosRamirez/RecursiveMyriadBasedFilters"> matlab codes </a> </li>
+			</ul>
+
+			<h3> Sparse Signal Recovery Based on Weighted Median </h3>
+
+			<center>
+				<img src="ICASSP2014.jpg" alt="Performance" height="256">
+			</center>
+			<ul>
 				<li> Juan Ramírez and Jose Luis Paredes, "Robust Sparse Signal Recovery based on Weighted Median Operator", Proceedings of International Conference on Acoustic, Speech, and Signal Processing (ICASSP 2014), Florence, Italy, vol II, pp. 1050-1054, May 2014. <a href="https://github.com/JuanMarcosRamirez/SparseRecoveryWeightedMedian"> C-codes</a> </li>
 			</ul>
+
+	</div>
+	<div class="column right">
+  	</div>
+	</div>
 		
 
 	</body>
