--- a/index.html
+++ b/index.html
@@ -22,30 +22,41 @@
 			</ul>
 		</div>
 <!--		<h1> Welcome </h1> -->
+
 	</div>
 
 
-		<center>
-		<div>
-			<h1> Homepage of Juan Marcos Ramírez</h1>
-		</div>
-		</center>
+	<div class="row">
+	<div class="column left">
+  	</div>
+	<div class="column middle">
+			<center>
+			<div>
+				<h1>Juan Marcos Ramírez Rondón</h1>
+			</div>
+			</center>
+			
+			<img src="JuanRamirezPhoto.jpeg" alt="J. M. Ramirez" width="256" height="256">
 
-			<h2> Short Bio </h2>
-			<p ALIGN="justify"> Juan Marcos Ramírez Rondón received the B.S. diploma in electrical engineering at the Universidad de Los Andes (ULA), Mérida, Venezuela, in 2002. In 2004, He joined as a teaching and research staff of the Electrical Engineering Department at ULA. He received the M.S. in biomedical engineering and the Doctor’s degree in applied sciences at ULA, in 2007 and 2017, respectively. His research experience is focused on the development of robust sparse signal representation algorithms. Furthermore, he worked in the proposal of recursive filtering structures based on the weighted myriad operator.</p>
+				<h2> Short Bio </h2>
+				<p ALIGN="justify"> Juan Marcos Ramírez Rondón received the B.S. diploma in electrical engineering at the Universidad de Los Andes (ULA), Mérida, Venezuela, in 2002. In 2004, He joined as a teaching and research staff of the Electrical Engineering Department at ULA. He received the M.S. in biomedical engineering and the Doctor’s degree in applied sciences at ULA, in 2007 and 2017, respectively. His research experience is focused on the development of robust sparse signal representation algorithms. Furthermore, he worked in the proposal of recursive filtering structures based on the weighted myriad operator.</p>
 
-<p ALIGN="justify"> Additionally, he worked as a postdoctoral intern at the <a href="http://hdspgroup.com/"> High Dimensional Signal Processing (HDSP)</a>  Group, Bucaramanga, Colombia (2017-2018). In 2019, he worked at the HDSP group as a consultant for the UIS-ECOPETROL scientific and technological agreement. Under the advising of Dr. Henry Arguello Fuentes, the research focused on spectral image classification from compressive spectral imaging measurements.</p>
+				<p ALIGN="justify"> Additionally, he worked as a postdoctoral intern at the <a href="http://hdspgroup.com/"> High Dimensional Signal Processing (HDSP)</a>  Group, Bucaramanga, Colombia (2017-2018). In 2019, he worked at the HDSP group as a consultant for the UIS-ECOPETROL scientific and technological agreement. Under the advising of Dr. Henry Arguello Fuentes, the research focused on spectral image classification from compressive spectral imaging measurements.</p>
 
-<p ALIGN="justify"> Currently, he is working «Compressive Sampling Based Acquisition Models For Secure Transmission and Reliable Data Recovery in Smart Grids» project as a GET Cofund Fellow at the Universidad Rey Juan Carlos, together with the Hardware-Software Design (GDHwSw) Research group. </p>
+				<p ALIGN="justify"> Currently, he is working «Compressive Sampling Based Acquisition Models For Secure Transmission and Reliable Data Recovery in Smart Grids» project as a GET Cofund Fellow at the Universidad Rey Juan Carlos, together with the Hardware-Software Design (GDHwSw) Research group. </p>
 
-			<h2> Research interest </h2>
-			<ul>
-				<li> Spectral Image Classification from Compressive Measurements </li>
-				<li> Multi-shot Seismic Wavefield Recovery </li>	
-				<li> Robust Sparse Signal Reconstruction Algorithms </li>
-				<li> Robust Filtering </li>
-				<li> Image Denoising and Image Inpainting </li>		
-			</ul>
+				<h2> Research interest </h2>
+				<ul>
+					<li> Spectral Image Classification from Compressive Measurements </li>
+					<li> Multi-shot Seismic Wavefield Recovery </li>	
+					<li> Robust Sparse Signal Reconstruction Algorithms </li>
+					<li> Robust Filtering </li>
+					<li> Image Denoising and Image Inpainting </li>		
+				</ul>
+	</div>
+	<div class="column right">
+  	</div>
+	</div>
 		
 
 	</body>
