--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,10 @@
 	</div>
 
 
+	<div class="row">
+	<div class="column left">
+  	</div>
+	<div class="column middle">
 		<center>
 		<div>
 			<h1> Talks </h1>
@@ -40,6 +44,11 @@
 				<li> Representación Robusta de Señales con Coeficientes Poco Densos en Diccionarios Ortogonales y Redundantes. Mérida, Mayo, 2015. <a href="PresentacionCandidatura.pdf"> pdf. </a> </li>
 			</ul>
 		
+	</div>
+	<div class="column right">
+  	</div>
+	</div>
+
 
 	</body>
 </html>
