--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,10 @@
 		</div>
 	</div>
 
-
+	<div class="row">
+	<div class="column left">
+  	</div>
+	<div class="column middle">
 		<center>
 		<div>
 			<h1> Publications </h1>
@@ -33,13 +36,14 @@
 			<h2> Journal Papers </h2>
 			<div class="pubitem">
 			<ul>
+				<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "Feature Fusion Via Dual-Resolution Compressive Measurement Matrix Analysis For Spectral Image Classification." Signal Processing: Image Communication, vol. 90, Jan, 2021. (<a href="https://doi.org/10.1016/j.image.2020.116014">link</a>).(<a href="https://github.com/JuanMarcosRamirez/featurefusion_getfund">code</a>) </li>
 				<li> Hector Vargas, Juan Ramirez, and Henry Arguello. "ADMM-based ℓ1− ℓ1 optimization algorithm for robust sparse channel estimation in OFDM systems." Signal Processing, vol. 167, Feb, 2020. (<a href="https://doi.org/10.1016/j.sigpro.2019.107296">link</a>). </li>
 				<li> Crisostomo Barajas-Solano,, Juan Ramirez, and Henry Arguello. "Convolutional sparse coding framework for compressive spectral imaging." Journal of Visual Communication and Image Representation, vol. 66, Jan 2020. (<a href="https://www.sciencedirect.com/science/article/pii/S1047320319303116">link</a>). </li>
 				<li> Juan Ramirez and Henry Arguello, "Spectral Image Classification From Multi-Sensor Compressive Measurements," IEEE Transactions on Geoscience and Remote Sensing, vol. 58, no. 1, pp. 626-636, Jan. 2020. (<a href="https://ieeexplore.ieee.org/abstract/document/8851409">link</a>). </li>
 				<li> Juan Ramirez and Henry Arguello, "Multiresolution Compressive Feature Fusion for Spectral Image Classification," IEEE Transactions on Geoscience and Remote Sensing, vol. 57, no. 12, pp. 9900-9911, Dec. 2019. (<a href="https://ieeexplore.ieee.org/abstract/document/8809355">link</a>) </li>
 				<li> Yánez-Sánchez, N. A., Ramírez, J. M., Paredes, J. L., Pinto, A. D., Torres, J. M., and Perez, M. L. "Robust channel estimation for ultra-wide band communications." Revista Ingenierías Universidad de Medellín vol. 18.34, Jun. 2019, pp. 181-197. (<a href="http://www.scielo.org.co/pdf/rium/v18n34/1692-3324-rium-18-34-181.pdf">pdf</a>) </li>
 				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Myriad-Mean Filters: Adaptive Algorithms and Applications", Signal Processing, vol. 139, No 1, pp. 12-24, Oct, 2017 (<a href="https://doi.org/10.1016/j.sigpro.2017.03.031">link</a>). </li>
-				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Weighted Myriad Based Filters and their Optimizations", IEEE Transactions on Signal Processing, vol.64, No. 15, pp. 4027-4039, Aug, 2016. (<a href="https://ieeexplore.ieee.org/abstract/document/7457715">link</a>). (<a href="https://github.com/JuanMarcosRamirez/RecursiveMyriadBasedFilters">codes</a>). </li>
+				<li> Juan Ramírez and Jose Luis Paredes, "Recursive Weighted Myriad Based Filters and their Optimizations", IEEE Transactions on Signal Processing, vol.64, No. 15, pp. 4027-4039, Aug, 2016. (<a href="https://ieeexplore.ieee.org/abstract/document/7457715">link</a>). (<a href="https://github.com/JuanMarcosRamirez/RecursiveMyriadBasedFilters">code</a>). </li>
 				<li> Juan Ramírez and Jose Luis Paredes, "Robust Transforms Based on the Weighted Median Operator", IEEE Signal Processing Letters, vol. 22, No. 1, pp. 120-124, Jan, 2015. (<a href="https://ieeexplore.ieee.org/document/6880779">link</a>). </li>
 				<li> Juan Ramírez, Franklin Moreno and Rubén Medina, “Analysis of Swing Time Series in the Gait of Parkinson Patients (Análisis de la Serie Temporal del Balanceo en la Marcha de Pacientes con Parkinson)” Universidad, Ciencia y Tecnología, vol. 10, No. 40, pp. 205-201, Sep, 2006. (<a href="https://www.researchgate.net/profile/Juan_Ramirez35/publication/309732568_ANALYSIS_OF_SWING_TIME_SERIES_IN_THE_GAIT_OF_PARKINSON_PATIENTS/links/5820633a08ae40da2cb4e113.pdf">pdf</a>). </li>
 				<li> José Paredes, Juan Ramírez, Giorgio Bianchi, “Median Based Robust Normalization Methods of cDNA Microarray Data (Métodos Robustos de Normalización de Datos de Microarreglos de ADNc Basados en la Mediana)” Ciencia e Ingeniería, vol. 27, No. 2, pp. 89-97, Apr, 2006. (<a href="https://www.redalyc.org/pdf/5075/507550778006.pdf">pdf</a>). </li>
@@ -69,6 +73,12 @@
 				<li> Juan Ramírez and José Paredes, “Linear Regression Based on the Sample Myriad (Regresión Lineal Basada en Myriad Muestral)” VIII Congreso Internacional de Métodos Numéricos en Ingeniería y Ciencias Aplicadas (CIMENICS 2006), Isla de Margarita, Venezuela, Mar, 2006. </li>
 			</ul>
 		  </div>
+
+	</div>
+	<div class="column right">
+  	</div>
+	</div>
+
 
 	</body>
 </html>
