--- a/codes.html
+++ b/codes.html
@@ -35,6 +35,18 @@
 		</center>
 
 			<h2> Reproducible Research </h2>
+
+			<h3> Feature fusion from dual-resolution compressive measurements for spectral image classification </h3>
+
+			<center>
+				<img src="PaviaClassification.png" alt="Pavia labeling" width="800">
+			</center>
+			<ul>
+			<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "Feature Fusion Via Dual-Resolution Compressive Measurement Matrix Analysis For Spectral Image Classification." Signal Processing: Image Communication, vol. 90, Jan, 2021. <a href="https://github.com/JuanMarcosRamirez/featurefusion_getfund">matlab codes</a> </li>
+			</ul>
+
+
+
 			<h3> Recursive Weighted Myriad Filters </h3>
 
 			<center>
