--- a/codes.html
+++ b/codes.html
@@ -39,7 +39,7 @@
 			<h3> Feature fusion from dual-resolution compressive measurements for spectral image classification </h3>
 
 			<center>
-				<img src="PaviaClassification.png" alt="Pavia labeling" width="800">
+				<img src="variousclassifiers.png" alt="Pavia labeling" width="800">
 			</center>
 			<ul>
 			<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "Feature Fusion Via Dual-Resolution Compressive Measurement Matrix Analysis For Spectral Image Classification." Signal Processing: Image Communication, vol. 90, Jan, 2021. <a href="https://github.com/JuanMarcosRamirez/featurefusion_getfund">matlab codes</a> </li>
