--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
 				<li> <a href="codes.html">Codes</a> </li>
-				<li> <a href="contacts.html">Codes</a> </li>			
+				<li> <a href="contacts.html">Codes</a> </li>	
 			</ul>
 		</div>
 	</div>
@@ -30,25 +30,16 @@
 	<div class="column middle">
 		<center>
 		<div>
-			<h1> Talks </h1>
+			<h1> Contacts</h1>
 		</div>
 		</center>
 
-		<h2> 2016 </h2>
-			<ul>
-				<li> Técnicas Robustas de Tratamiento de Señales Basadas en Métodos de Estimación Estadística. Defensa de la Tesis Doctoral. Mérida, Diciembre, 2016. <a href="DefensaTesisDoctoral.pdf"> pdf. </a> </li>
-			</ul>
 
-		<h2> 2015 </h2>
-			<ul>
-				<li> Representación Robusta de Señales con Coeficientes Poco Densos en Diccionarios Ortogonales y Redundantes. Mérida, Mayo, 2015. <a href="PresentacionCandidatura.pdf"> pdf. </a> </li>
-			</ul>
-		
 	</div>
 	<div class="column right">
   	</div>
 	</div>
-
+		
 
 	</body>
 </html>
