--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
 				<li> <a href="codes.html">Codes</a> </li>
-				<li> Contacts </li>		
+				<li> <a href="contacts.html">Codes</a> </li>		
 			</ul>
 		</div>
 	</div>
