--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
 				<li> <a href="codes.html">Codes</a> </li>
-				<li> Contacts </li>		
+				<li> <a href="contacts.html">Contacts</a> </li>		
 			</ul>
 		</div>
 <!--		<h1> Welcome </h1> -->
