--- a/contacts.html
+++ b/contacts.html
@@ -34,6 +34,9 @@
 		</div>
 		</center>
 
+		<ul>
+		<li> Juan Marcos Ramírez Rondón. GET-Cofund MSCA Postdoctoral Fellow. Computer Science Department. Universidad Rey Juan Carlos. Móstoles, 28933, Spain. </li>
+		</ul>
 
 	</div>
 	<div class="column right">
