--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,7 @@
 			<h2> Journal Papers </h2>
 			<div class="pubitem">
 			<ul>
+				<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "LADMM-Net: An unrolled deep network for spectral image fusion from compressive data." Signal Processing, vol. 189, Dec, 2021. (<a href="https://doi.org/10.1016/j.sigpro.2021.108239">link</a>).(<a href="https://github.com/JuanMarcosRamirez/LADMM_Net_Pytorch">code</a>) </li>
 				<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "Feature Fusion Via Dual-Resolution Compressive Measurement Matrix Analysis For Spectral Image Classification." Signal Processing: Image Communication, vol. 90, Jan, 2021. (<a href="https://doi.org/10.1016/j.image.2020.116014">link</a>).(<a href="https://github.com/JuanMarcosRamirez/featurefusion_getfund">code</a>) </li>
 				<li> Hector Vargas, Juan Ramirez, and Henry Arguello. "ADMM-based ℓ1− ℓ1 optimization algorithm for robust sparse channel estimation in OFDM systems." Signal Processing, vol. 167, Feb, 2020. (<a href="https://doi.org/10.1016/j.sigpro.2019.107296">link</a>). </li>
 				<li> Crisostomo Barajas-Solano,, Juan Ramirez, and Henry Arguello. "Convolutional sparse coding framework for compressive spectral imaging." Journal of Visual Communication and Image Representation, vol. 66, Jan 2020. (<a href="https://www.sciencedirect.com/science/article/pii/S1047320319303116">link</a>). </li>
