--- a/codes.html
+++ b/codes.html
@@ -34,6 +34,24 @@
 		</div>
 		</center>
 
+
+			<h3> LADMM-Net: An unrolled deep network for spectral image fusion from compressive data </h3>
+
+			<center>
+				<img src="Fusion1.png" alt="Pavia labeling" width="800">
+			</center>
+			<center>
+				<img src="Fusion2.png" alt="Pavia labeling" width="800">
+			</center>
+			<center>
+				<img src="Fusion3.png" alt="Pavia labeling" width="800">
+			</center>
+			<ul>
+			<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "LADMM-Net: An unrolled deep network for spectral image fusion from compressive data." Signal Processing, vol. 189, Dec, 2021. <a href="https://doi.org/10.1016/j.sigpro.2021.108239">python codes</a> </li>
+			</ul>
+
+
+
 			<h3> Feature fusion from dual-resolution compressive measurements for spectral image classification </h3>
 
 			<center>
