--- a/codes.html
+++ b/codes.html
@@ -37,6 +37,7 @@
 
 			<h3> LADMM-Net: An unrolled deep network for spectral image fusion from compressive data </h3>
 
+			<h4> Spectral image fusion from compressive measurements </h4>
 			<center>
 				<img src="Fusion1.jpg" alt="Pavia labeling" width="800">
 			</center>
