--- a/codes.html
+++ b/codes.html
@@ -47,6 +47,15 @@
 			<center>
 				<img src="Fusion3.jpg" alt="Pavia labeling" width="800">
 			</center>
+
+			<h4> Image compressive sensing </h4>
+			<center>
+				<img src="Boy.png" alt="Pavia labeling" width="800">
+			</center>
+			<center>
+				<img src="Hector.png" alt="Pavia labeling" width="800">
+			</center>
+
 			<ul>
 			<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "LADMM-Net: An unrolled deep network for spectral image fusion from compressive data." Signal Processing, vol. 189, Dec, 2021. <a href="https://doi.org/10.1016/j.sigpro.2021.108239">python codes</a> </li>
 			</ul>
