--- a/codes.html
+++ b/codes.html
@@ -57,7 +57,7 @@
 			</center>
 
 			<ul>
-			<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "LADMM-Net: An unrolled deep network for spectral image fusion from compressive data." Signal Processing, vol. 189, Dec, 2021. <a href="https://doi.org/10.1016/j.sigpro.2021.108239">python codes</a> </li>
+			<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "LADMM-Net: An unrolled deep network for spectral image fusion from compressive data." Signal Processing, vol. 189, Dec, 2021. <a href="https://github.com/JuanMarcosRamirez/LADMM_Net_Pytorch">python codes</a> </li>
 			</ul>
 
 
