--- a/codes.html
+++ b/codes.html
@@ -35,6 +35,22 @@
 		</center>
 
 
+			<h3> Subspace-based Feature Fusion from Hyperspectral and Multispectral Images for Pixel-based Classification </h3>
+
+			<center>
+				<img src="demo_image.jpg" alt="Pavia labeling" width="800">
+			</center>
+			<center>
+				<img src="fig1_image.jpg" alt="Pavia labeling" width="800">
+			</center>
+			<center>
+
+			<ul>
+			<li> Juan Ramírez, Héctor Vargas, José Ignacio Martínez Torre, and Henry Arguello. “Feature fusion via dual-resolution compressive measurement matrix analysis for spectral image classification” IEEE Geoscience and Remote Sensing Symposium (IGARSS 2021), Virtual Conference, September 2021. <a href="https://github.com/JuanMarcosRamirez/featurefusion_igarss2021">matlab codes</a> </li>
+			</ul>
+
+
+
 			<h3> LADMM-Net: An unrolled deep network for spectral image fusion from compressive data </h3>
 
 			<h4> Spectral image fusion from compressive measurements </h4>
