--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,7 @@
 			<h2> Journal Papers </h2>
 			<div class="pubitem">
 			<ul>
+				<li> Jonathan Monsalve, Juan Ramirez, Iñaki Esnaola, and Henry Arguello. "Covariance Estimation from Compressive Data Partitions using a Projected Gradient-based Algorithm." IEEE Transactions on Image Processing, vol. 31, 2022. [<a href="https://doi.org/10.1109/TIP.2022.3187285">link</a>]. </li>
 				<li> Nelson Díaz, Juan Ramirez, Esteban Vera, and Henry Arguello. "Adaptive Multisensor Acquisition via Spatial Contextual Information for Compressive Spectral Image Classification." IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, vol. 14, Dec, 2021. [<a href="https://doi.org/10.1109/JSTARS.2021.3111508">link</a>, <a href="https://github.com/nelson10/CompressiveAdaptiveClassificationMultisensor.">code</a>]. </li>
 				<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "LADMM-Net: An unrolled deep network for spectral image fusion from compressive data." Signal Processing, vol. 189, Dec, 2021. [<a href="https://doi.org/10.1016/j.sigpro.2021.108239">link</a>, <a href="https://github.com/JuanMarcosRamirez/LADMM_Net_Pytorch">code</a>]. </li>
 				<li> Juan Ramirez, José Ignacio Martínez Torre, and Henry Arguello. "Feature Fusion Via Dual-Resolution Compressive Measurement Matrix Analysis For Spectral Image Classification." Signal Processing: Image Communication, vol. 90, Jan, 2021. [<a href="https://doi.org/10.1016/j.image.2020.116014">link</a>, <a href="https://github.com/JuanMarcosRamirez/featurefusion_getfund">code</a>] </li>
