--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,7 @@
 			<h2> Conference Papers </h2>
 			<div class="pubitem">
 			<ul>
+				<li> Juan Ramirez, Pablo Rojo, Fernando Diez, Vincenzo Mancuso and Antonio Fernandez-Anta. "Cleaning Matters! Preprocessing-enhanced Anomaly Detection and Classification in Mobile Networks." 2022 20th Mediterranean Communication and Computer Networking Conference (MedComNet), Mario Gerla Best Paper Award, Jun, 2022. [<a href="https://doi.org/10.1109/MedComNet55087.2022.9810378">link</a>]. </li>
 				<li> Cristian Arcos, Jorge Bacca, Juan Ramírez, Henry Arguello. “Cascaded Convolutional Generator Networks for Solving Imaging Inverse Problems”, 2021 XXIII Symposium on Image, Signal Processing and Artificial Vision (STSIVA 2021), Virtual Conference, September 2021 [<a href="https://doi.org/10.1109/STSIVA53688.2021.9591668">link</a>].</li>
 				<li> Juan Ramírez, Héctor Vargas, José Ignacio Martínez Torre, and Henry Arguello. “Feature fusion via dual-resolution compressive measurement matrix analysis for spectral image classification” IEEE Geoscience and Remote Sensing Symposium (IGARSS 2021), Virtual Conference, September 2021 [<a href="https://doi.org/10.1109/IGARSS47720.2021.9554465">link</a>, <a href="https://github.com/JuanMarcosRamirez/featurefusion_igarss2021">code</a>]. </li>
 				<li> Crisóstomo Barajas, Juan Ramírez, and Henry Arguello. "Spectral Video Compression Using Convolutional Sparse Coding." In 2020 IEEE Data Compression Conference (DCC), pp. 253-262. Virtual Conference, March 2020 [<a href="https://doi.org/10.1109/DCC47342.2020.00033">link</a>]. </li>
