--- a/codes.html
+++ b/codes.html
@@ -14,7 +14,7 @@
 		<div class="menu">
 			<ul>
 				<li> <a href="index.html"> Home </a> </li>
-				<li> Teaching </li>
+<!--				<li> Teaching </li>-->
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
 				<li> <a href="codes.html">Codes</a> </li>
