--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,7 @@
 			<h2> Journal Papers </h2>
 			<div class="pubitem">
 			<ul>
+				<li> Jesús Rufino, Juan Marcos Ramirez, Jose Aguilar, Carlos Baquero, Jaya Champati, Davide Frey, Rosa Elvira Lillo, Antonio Fernandez-Anta. "Consistent comparison of symptom-based methods for COVID-19 infection detection." International Journal of Medical Informatics, pp. 105133, Jun, 2023. [<a href="https://doi.org/10.1016/j.ijmedinf.2023.105133">link</a>, <a href=bibtex/Rufino2023Consistent.bib">bibtex</a>]. </li>
 				<li> Crisostomo Barajas, Juan Ramirez, Jose Ignacio Martinez-Torre and Henry Arguello. "Compressive Spectral Video Sensing using the Convolutional Sparse Coding Framework CSC4D." Journal of Visual Communication and Image Representation, vol. 92, Apr, 2023. [<a href="https://doi.org/10.1016/j.jvcir.2023.103782">link</a>]. </li>
 			        <li> Juan Ramirez, Fernando Diez, Pablo Rojo, Vincenzo Mancuso and Antonio Fernandez-Anta. "Explainable Machine Learning for Performance Anomaly Detection and Classification in Mobile Networks." Computer Communications, Jan, 2023. [<a href="https://doi.org/10.1016/j.comcom.2023.01.003">link</a>, <a href="https://github.com/GCGImdea/NetPredict-Public">code</a>]. </li>
 				<li> Hector Vargas, Juan Ramirez, Samuel Pinilla, and Jose Ignacio Martinez. "Multi-Sensor Image Feature Fusion via Subspace-based approach using l1-Gradient Regularization." IEEE Journal of Selected Topics in Signal Processing, Nov, 2022. [<a href="https://doi.org/10.1109/JSTSP.2022.3219357">link</a>]. </li>
