--- a/codes.html
+++ b/codes.html
@@ -42,7 +42,7 @@
 			</center>
 			
 			<ul>
-			<li> Juan Ramírez, Héctor Vargas, José Ignacio Martínez Torre, and Henry Arguello. “Feature fusion via dual-resolution compressive measurement matrix analysis for spectral image classification” IEEE Geoscience and Remote Sensing Symposium (IGARSS 2021), Virtual Conference, September 2021. <a href="https://github.com/JuanMarcosRamirez/featurefusion_igarss2021">matlab codes</a> </li>
+			<li> Juan Ramírez, Héctor Vargas, José Ignacio Martínez Torre, and Henry Arguello. “Subspace-Based Feature Fusion from Hyperspectral and Multispectral Images for Land Cover Classification” IEEE Geoscience and Remote Sensing Symposium (IGARSS 2021), Virtual Conference, September 2021. <a href="https://github.com/JuanMarcosRamirez/featurefusion_igarss2021">matlab codes</a> </li>
 			</ul>
 
 
