--- a/codes.html
+++ b/codes.html
@@ -35,6 +35,18 @@
 		</center>
 
 
+			<h3> Explainable Machine Learning for Performance Anomaly Detection and Classification in Mobile Networks </h3>
+
+			<center>
+				<img src="XMLAD_Figure.png" alt="Flowchart" width="800">
+			</center>
+			
+			<ul>
+			<li> Juan Ramirez, Fernando Diez, Pablo Rojo, Vincenzo Mancuso and Antonio Fernandez-Anta. "Explainable Machine Learning for Performance Anomaly Detection and Classification in Mobile Networks." Computer Communications, January, 2023. <a href="https://github.com/GCGImdea/NetPredict-Public/tree/main/CommNetworks2022">Python codes</a> </li>
+			</ul>
+
+
+
 			<h3> Subspace-based Feature Fusion from Hyperspectral and Multispectral Images for Pixel-based Classification </h3>
 
 			<center>
