--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
 		</center>
 
 		<ul>
-		<li> Juan Marcos Ramírez Rondón. GET-Cofund MSCA Postdoctoral Fellow. Computer Science Department. Universidad Rey Juan Carlos. Ampliación Rectorado. Despacho 2020. Campus Móstoles, 28933, Spain. email: juanmarcos.ramirez@urjc.es. </li>
+		<li> Juan Marcos Ramírez Rondón. Postdoctoral Researcher. IMDEA Netwoks Institue. Av. Mar Mediterráneo 22, Leganés, 28918, Spain. email: juan.ramirez@imdea.org. </li>
 		</ul>
 
 	</div>
