--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,41 @@
 	<title> J.M. Ramirez Web Page </title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="style.css">
+	
+	    <meta name="viewport" content=
+        "width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+ 
+    <style>
+        .fa:hover {
+            opacity: 0.9;
+        }
+ 
+        .fa-linkedin {
+            background: #007bb5;
+            color: white;
+        }
+ 
+        .fa-pinterest {
+            background: #cb2027;
+            color: white;
+        }
+ 
+        .fa-reddit {
+            background: #ff5700;
+            color: white;
+        }
+ 
+        .fa {
+            padding: 20px;
+            font-size: 40px;
+            width: 60px;
+            text-decoration: none;
+            margin: 5px 80px;
+        }
+ 
+    </style>
 	</head>
 
 	<body>
