--- a/contacts.html
+++ b/contacts.html
@@ -73,6 +73,8 @@
 		<li> Juan Marcos Ramírez Rondón. Postdoctoral Researcher. IMDEA Netwoks Institue. Av. Mar Mediterráneo 22, Leganés, 28918, Spain. email: juan.ramirez@imdea.org. </li>
 		</ul>
 
+		<a href="#" class="fa fa-linkedin"></a>
+
 	</div>
 	<div class="column right">
   	</div>
