--- a/contacts.html
+++ b/contacts.html
@@ -73,7 +73,7 @@
 		<li> Juan Marcos Ramírez Rondón. Postdoctoral Researcher. IMDEA Netwoks Institue. Av. Mar Mediterráneo 22, Leganés, 28918, Spain. email: juan.ramirez@imdea.org. </li>
 		</ul>
 
-		<a href="#" class="fa fa-linkedin"></a>
+		<a href="www.linkedin.com/in/juan-marcos-ramirez-rondon-980177131" class="fa fa-linkedin"></a>
 
 	</div>
 	<div class="column right">
