--- a/contacts.html
+++ b/contacts.html
@@ -34,10 +34,11 @@
  
         .fa {
             padding: 20px;
-            font-size: 40px;
-            width: 60px;
+            font-size: 30px;
+            width: 50px;
+            text-align:center;
             text-decoration: none;
-            margin: 5px 80px;
+            margin: 5px 2px;
         }
  
     </style>
