--- a/talks.html
+++ b/talks.html
@@ -34,6 +34,10 @@
 		</div>
 		</center>
 
+		<h2> 2022 </h2>
+			<ul>
+				<li> Cleaning Matters! Preprocessing-enhanced Anomaly Detection and Classification in Mobile Networks. 2022 20th Mediterranean Communication and Computer Networking Conference (MedComNet), Mario Gerla Best Paper Award, Jun, 2022. <a href="MedComNet2022_v2.pdf"> pdf. </a> </li>
+
 		<h2> 2016 </h2>
 			<ul>
 				<li> Técnicas Robustas de Tratamiento de Señales Basadas en Métodos de Estimación Estadística. Defensa de la Tesis Doctoral. Mérida, Diciembre, 2016. <a href="DefensaTesisDoctoral.pdf"> pdf. </a> </li>
