--- a/talks.html
+++ b/talks.html
@@ -34,6 +34,11 @@
 		</div>
 		</center>
 
+		<h2> 2024 </h2>
+			<ul>
+				<li> The Rumble in the Millimeter Wave Jungle: Obstructions Vs Ris. 2024 22nd Mediterranean Communication and Computer Networking Conference (MedComNet). IEEE, 2024. Mario Gerla Best Paper Award. <a href="MedComNet2024_v3.pdf"> pdf. </a> </li>
+			</ul>
+
 		<h2> 2022 </h2>
 			<ul>
 				<li> Cleaning Matters! Preprocessing-enhanced Anomaly Detection and Classification in Mobile Networks. 2022 20th Mediterranean Communication and Computer Networking Conference (MedComNet), Mario Gerla Best Paper Award, Jun, 2022. <a href="MedComNet2022_v2.pdf"> pdf. </a> </li>
