--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li> <a href="publications.html">Publications</a> </li>
 				<li> <a href="talks.html"> Talks </a> </li>
 				<li> <a href="codes.html">Codes</a> </li>
+				<li> <a href="iFigs.html">iFigs</a> </li>
 				<li> <a href="contacts.html">Contacts</a> </li>		
 			</ul>
 		</div>
