--- a/iFigs.html
+++ b/iFigs.html
@@ -24,6 +24,16 @@
 		</div>
 	</div>
 
+	<div class="row">
+	<div class="column left">
+  	</div>
+	<div class="column middle">
+		<center>
+		<div>
+			<h1> (iFigs) informative Figures using LaTeX and Matplotlib </h1>
+		</div>
+		</center>
+
 
 <!--	<div class="row">-->
 <!--	<div class="column left">-->
