--- a/codes.html
+++ b/codes.html
@@ -39,7 +39,7 @@
 			<h3> Explainable Machine Learning for Performance Anomaly Detection and Classification in Mobile Networks </h3>
 
 			<center>
-				<img src="XMLAD_Figure.png" alt="Flowchart" width="800">
+				<img2 src="XMLAD_Figure.png" alt="Flowchart" width="800">
 			</center>
 			
 			<ul>
@@ -51,7 +51,7 @@
 			<h3> Subspace-based Feature Fusion from Hyperspectral and Multispectral Images for Pixel-based Classification </h3>
 
 			<center>
-				<img src="demo_image.jpg" alt="Pavia labeling" width="800">
+				<img2 src="demo_image.jpg" alt="Pavia labeling" width="800">
 			</center>
 			
 			<ul>
