--- a/codes.html
+++ b/codes.html
@@ -39,7 +39,7 @@
 			<h3> Explainable Machine Learning for Performance Anomaly Detection and Classification in Mobile Networks </h3>
 
 			<center>
-				<img src="XMLAD_Figure.png" alt="Flowchart" width="800" class="flat_image">
+				<img src="XMLAD_Figure.png" class="flat_image" alt="Flowchart" width="800">
 			</center>
 			
 			<ul>
