--- a/iFigs.html
+++ b/iFigs.html
@@ -8,6 +8,18 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
+<head>
+<style>
+code {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
+</style>
+</head>
+
 	<body>
 
 	<div class="image_ppal">
@@ -33,6 +45,14 @@
 			<h1> (iFigs) informative Figures using LaTeX and Matplotlib </h1>
 		</div>
 		</center>
+
+
+<code>\documentclass{article}
+\usepackage{graphicx} 
+\usepackage{tikz}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.8} </code>
+
 
 
 <!--	<div class="row">-->
