--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 			<h2> Journal Papers </h2>
 			<div class="pubitem">
 			<ul>
-
+			    <li> Gontzal Sagastabeitia, Josu Doncel, Jose Aguilar, Antonio Fernández-Anta, and <b>Juan Marcos Ramirez</b>. "COVID-19 seroprevalence estimation and forecasting in the USA from ensemble machine learning models using a stacking strategy." Expert Systems with Applications. Volume 258, December 2024, Expert Systems with Applications. [<a href="https://doi.org/10.1016/j.eswa.2024.124930">link</a>, <a href="bibtex/Sagas2024Covid.txt">bibtex</a>] </li>
 				<li> Diego Benito, Carlos Quintero, Jose Aguilar, <b>Juan Marcos Ramirez</b>, and Antonio Fernandez-Anta. "Explainability analysis: An in-depth comparison between Fuzzy Cognitive Maps and LAMDA." Applied Soft Computing, vol. 164, October, 2024, 111940. [<a href="https://doi.org/10.1016/j.asoc.2024.111940">link</a>, <a href="bibtex/Benito2024Explainability.txt">bibtex</a>]. </li>
 				<li> Diego Benito, Jesús Rufino, <b>Juan Marcos Ramirez</b>, Antonio Fernandez-Anta, and Jose Aguilar. "An in-depth analysis of COVID-19 symptoms considering the co-occurrence of symptoms using clustering algorithms." IEEE Access, vol. 12, 2024. [<a href="https://doi.org/10.1109/ACCESS.2024.3456246">link</a>, <a href="bibtex/Benito2024InDepth.txt">bibtex</a>]. </li>
         <li> Jesús Rufino, <b>Juan Marcos Ramirez</b>, Jose Aguilar, Carlos Baquero, Jaya Champati, Davide Frey, Rosa Elvira Lillo, Antonio Fernandez-Anta. "Performance and explainability of feature selection-boosted tree-based classifiers for COVID-19 detection." Heliyon, vol. 10, Jan, 2024. [<a href="https://doi.org/10.1016/j.heliyon.2023.e23219">link</a>, <a href="bibtex/Rufino2023Performance.txt">bibtex</a>]. </li>
