--- a/iFigs.html
+++ b/iFigs.html
@@ -20,6 +20,26 @@ code {
 </style>
 </head>
 
+<head>
+<style>
+.nav {
+  background-color: gray; 
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.nav li {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
+</style>
+</head>
+
 	<body>
 
 	<div class="image_ppal">
@@ -46,18 +66,11 @@ code {
 		</div>
 		</center>
 
+<h2> Histograms </h2>
 
-<code>\documentclass{article}
-
-\usepackage{graphicx} 
-
-\usepackage{tikz}
-
-\usepackage{pgfplots}
-
-\pgfplotsset{compat=1.8} </code>
-
-
+<ul class="nav">
+  <li><a \documentclass{article} </a></li>
+</ul>
 
 <!--	<div class="row">-->
 <!--	<div class="column left">-->
