--- a/iFigs.html
+++ b/iFigs.html
@@ -69,7 +69,7 @@ code {
 <h2> Histograms </h2>
 
 <ul class="nav">
-  <li><a \documentclass{article} </a></li>
+  <li>\documentclass{article}</li>
 </ul>
 
 <!--	<div class="row">-->
