--- a/iFigs.html
+++ b/iFigs.html
@@ -70,6 +70,11 @@ code {
 
 <ul class="nav">
   <li>\documentclass{article}</li>
+  <li>\documentclass{article}</li>
+  <li>\documentclass{article}</li>
+  <li>\documentclass{article}</li>
+  <li>\documentclass{article}</li>
+  <li>\documentclass{article}</li>
 </ul>
 
 <!--	<div class="row">-->
