--- a/iFigs.html
+++ b/iFigs.html
@@ -25,7 +25,7 @@ code {
 .nav {
   background-color: gray; 
   list-style-type: none;
-  text-align: center;
+  text-align: left;
   margin: 0;
   padding: 0;
 }
@@ -37,6 +37,16 @@ code {
   padding: 2px;
   font-size: 105%;
 }
+
+
+.nav p {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
+
 </style>
 </head>
 
@@ -69,12 +79,12 @@ code {
 <h2> Histograms </h2>
 
 <ul class="nav">
-  <li>\documentclass{article}</li>
-  <li>\documentclass{article}</li>
-  <li>\documentclass{article}</li>
-  <li>\documentclass{article}</li>
-  <li>\documentclass{article}</li>
-  <li>\documentclass{article}</li>
+  <p>\documentclass{article}<br>
+  <li>\documentclass{article}<br>
+  <li>\documentclass{article}<br>
+  <li>\documentclass{article}<br>
+  <li>\documentclass{article}<br>
+  <li>\documentclass{article}</p>
 </ul>
 
 <!--	<div class="row">-->
