--- a/iFigs.html
+++ b/iFigs.html
@@ -23,7 +23,7 @@ code {
 <head>
 <style>
 .nav {
-  background-color: gray; 
+  background-color: AliceBlue; 
   list-style-type: none;
   text-align: left;
   margin: 0;
@@ -78,12 +78,12 @@ code {
 <h2> Histograms </h2>
 
 <ul class="nav">
-  <p>\documentclass{article}<br>
-  <li>\documentclass{article}<br>
-  <li>\documentclass{article}<br>
-  <li>\documentclass{article}<br>
-  <li>\documentclass{article}<br>
-  <li>\documentclass{article}</p>
+  <p> \documentclass{article}<br>
+  \documentclass{article}<br>
+  \documentclass{article}<br>
+  \documentclass{article}<br>
+  \documentclass{article}<br>
+  \documentclass{article}</p>
 </ul>
 
 <!--	<div class="row">-->
