--- a/iFigs.html
+++ b/iFigs.html
@@ -78,11 +78,15 @@ code {
 
 <ul class="nav">
   <p> \documentclass{article}<br>
-  \documentclass{article}<br>
-  \documentclass{article}<br>
-  \documentclass{article}<br>
-  \documentclass{article}<br>
-  \documentclass{article}</p>
+  \usepackage{graphicx}<br>
+  \usepackage{tikz}<br>
+  \usepackage{pgfplots}<br>
+  \pgfplotsset{compat=1.8}</p>
+
+  <p>\begin{document}<br>
+  \maketitle</p>
+  
+  <p>\end{document}<br>
 </ul>
 
 <!--	<div class="row">-->
