--- a/iFigs.html
+++ b/iFigs.html
@@ -85,11 +85,12 @@ code {
 
   <p>\begin{document}</p>
   
-  <p>\begin{figure}[hb]
-\begin{center}
-\begin{tabular}{c c}
-\hspace{-10pt}
-    \begin{minipage}{.50\linewidth}
+  <p>\begin{figure}[hb]<br>
+\begin{center}<br>
+\begin{tabular}{c c}<br>
+\hspace{-10pt}<br>
+
+<pre>    \begin{minipage}{.50\linewidth} </pre> <br>
     \begin{tikzpicture}
         \begin{axis}[
             width=\textwidth,
