--- a/iFigs.html
+++ b/iFigs.html
@@ -89,8 +89,9 @@ code {
 \begin{center}<br>
 \begin{tabular}{c c}<br>
 \hspace{-10pt}<br>
+<pre>    \begin{minipage}{.50\linewidth} </pre> <br> </p>
 
-<pre>    \begin{minipage}{.50\linewidth} </pre> <br>
+
     \begin{tikzpicture}
         \begin{axis}[
             width=\textwidth,
@@ -130,7 +131,7 @@ code {
 \end{center}
     \caption{Histogram and kernel density estimation (KDE) of synthetic samples for (a) $\mathit{MSS}$ and (b) $\mathit{RTT}$.}
     \label{fig:synthetic_hist}
-\end{figure} </p>
+\end{figure} 
   
   <p>\end{document}<br>
 </ul>
