--- a/iFigs.html
+++ b/iFigs.html
@@ -40,9 +40,9 @@ code {
 
 .nav p {
   font-family: Consolas,"courier new";
-  color: crimson;
+  color: black;
   padding: 2px;
-  font-size: 105%;
+  font-size: 80%;
 }
 
 </style>
