--- a/iFigs.html
+++ b/iFigs.html
@@ -45,6 +45,13 @@ code {
   font-size: 80%;
 }
 
+.nav p1 {
+  font-family: Consolas,"courier new";
+  color: black;
+  padding: 10px;
+  font-size: 80%;
+}
+
 </style>
 </head>
 
@@ -88,8 +95,8 @@ code {
   <p>\begin{figure}[hb]<br>
 \begin{center}<br>
 \begin{tabular}{c c}<br>
-\hspace{-10pt}<br>
-<pre>    \begin{minipage}{.50\linewidth} </pre> <br> </p>
+\hspace{-10pt}<br></p>
+<p1>    \begin{minipage}{.50\linewidth}</p1>
 
 
     \begin{tikzpicture}
