--- a/iFigs.html
+++ b/iFigs.html
@@ -52,6 +52,20 @@ code {
   font-size: 80%;
 }
 
+.nav p2 {
+  font-family: Consolas,"courier new";
+  color: black;
+  padding: 40px;
+  font-size: 80%;
+}
+
+.nav p3 {
+  font-family: Consolas,"courier new";
+  color: black;
+  padding: 60px;
+  font-size: 80%;
+}
+
 </style>
 </head>
 
@@ -96,23 +110,21 @@ code {
 \begin{center}<br>
 \begin{tabular}{c c}<br>
 \hspace{-10pt}<br></p>
-<p1>    \begin{minipage}{.50\linewidth}</p1>
-
-
-    \begin{tikzpicture}
-        \begin{axis}[
-            width=\textwidth,
-            ylabel = \footnotesize \texttt{Density},
-            ylabel style = {yshift=-0.1cm},
-            xlabel = \footnotesize \texttt{(a) MSS (bytes)},
-            xlabel style = {yshift=0.1cm},
-            ymin=0,
-            ticklabel style = {font=\scriptsize},
-            ytick ={0,1e-2},
-        ]
-        \addplot[ybar,bar width=4,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/MSS_histogram.txt};
-        \addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/MSS_kde.txt};
-        \end{axis}
+<p1>\begin{minipage}{.50\linewidth}<br>
+    \begin{tikzpicture}</p1>
+        <p2>\begin{axis}[</p2>
+            <p3> width=\textwidth,<br>
+            ylabel = \footnotesize \texttt{Density},<br>
+            ylabel style = {yshift=-0.1cm},<br>
+            xlabel = \footnotesize \texttt{(a) MSS (bytes)},<br>
+            xlabel style = {yshift=0.1cm},<br>
+            ymin=0,<br>
+            ticklabel style = {font=\scriptsize},<br>
+            ytick ={0,1e-2},<br></p3>
+        <p2>]<br>
+        \addplot[ybar,bar width=4,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/MSS_histogram.txt};<br>
+        \addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/MSS_kde.txt};<br>
+        \end{axis}</p2>
     \end{tikzpicture}
 \end{minipage}
 &
