--- a/iFigs.html
+++ b/iFigs.html
@@ -109,7 +109,7 @@ code {
   <p>\begin{figure}[hb]<br>
 \begin{center}<br>
 \begin{tabular}{c c}<br>
-\hspace{-10pt}<br></p>
+\hspace{-10pt}</p>
 <p1>\begin{minipage}{.50\linewidth}<br>
     \begin{tikzpicture}</p1>
         <p2>\begin{axis}[</p2>
