--- a/iFigs.html
+++ b/iFigs.html
@@ -120,7 +120,7 @@ code {
             xlabel style = {yshift=0.1cm},<br>
             ymin=0,<br>
             ticklabel style = {font=\scriptsize},<br>
-            ytick ={0,1e-2},<br></p3>
+            ytick ={0,1e-2},</p3>
         <p2>]<br>
         \addplot[ybar,bar width=4,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/MSS_histogram.txt};<br>
         \addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/MSS_kde.txt};<br>
