--- a/iFigs.html
+++ b/iFigs.html
@@ -110,8 +110,8 @@ code {
 \begin{center}<br>
 \begin{tabular}{c c}<br>
 \hspace{-10pt}</p>
-<p1>\begin{minipage}{.50\linewidth}<br>
-    \begin{tikzpicture}</p1>
+<p1>\begin{minipage}{.50\linewidth}</p1>
+<p1>\begin{tikzpicture}</p1>
         <p2>\begin{axis}[</p2>
             <p3> width=\textwidth,<br>
             ylabel = \footnotesize \texttt{Density},<br>
