--- a/iFigs.html
+++ b/iFigs.html
@@ -110,7 +110,7 @@ code {
 \begin{center}<br>
 \begin{tabular}{c c}<br>
 \hspace{-10pt}</p>
-<p1>\begin{minipage}{.50\linewidth}</p1>
+<p1>\begin{minipage}{.50\linewidth}</p1><br>
 <p1>\begin{tikzpicture}</p1>
         <p2>\begin{axis}[</p2>
             <p3> width=\textwidth,<br>
