--- a/iFigs.html
+++ b/iFigs.html
@@ -111,7 +111,7 @@ code {
 \begin{tabular}{c c}<br>
 \hspace{-10pt}</p>
 <p1>\begin{minipage}{.50\linewidth}</p1><br>
-<p1>\begin{tikzpicture}</p1>
+<p1>\begin{tikzpicture}</p1><br>
 <p2>\begin{axis}[</p2><br>
 <p3> width=\textwidth,<br></p3>
             <p3>ylabel = \footnotesize \texttt{Density},</p3><br>
@@ -121,10 +121,10 @@ code {
             <p3>ymin=0,</p3><br>
             <p3>ticklabel style = {font=\scriptsize},</p3><br>
             <p3>ytick ={0,1e-2},</p3>
-        <p2>]<br>
-        \addplot[ybar,bar width=4,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/MSS_histogram.txt};<br>
-        \addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/MSS_kde.txt};<br>
-        \end{axis}</p2>
+        <p2>]</p2><br>
+        <p2>\addplot[ybar,bar width=4,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/MSS_histogram.txt};</p2><br>
+        <p2>\addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/MSS_kde.txt};</p2><br>
+        <p2>\end{axis}</p2>
     \end{tikzpicture}
 \end{minipage}
 &
