--- a/iFigs.html
+++ b/iFigs.html
@@ -120,14 +120,15 @@ code {
             <p3>xlabel style = {yshift=0.1cm},</p3><br>
             <p3>ymin=0,</p3><br>
             <p3>ticklabel style = {font=\scriptsize},</p3><br>
-            <p3>ytick ={0,1e-2},</p3>
+            <p3>ytick ={0,1e-2},</p3><br>
         <p2>]</p2><br>
         <p2>\addplot[ybar,bar width=4,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/MSS_histogram.txt};</p2><br>
         <p2>\addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/MSS_kde.txt};</p2><br>
         <p2>\end{axis}</p2>
-    \end{tikzpicture}
-\end{minipage}
-&
+    <p1>\end{tikzpicture}</p1><br>
+<p1>\end{minipage}</p1><br>
+<p>&</p><br>
+
     \hspace{-20pt}
     \begin{minipage}{.50\linewidth}
     \begin{tikzpicture}
