--- a/iFigs.html
+++ b/iFigs.html
@@ -106,10 +106,10 @@ code {
 
   <p>\begin{document}</p>
   
-  <p>\begin{figure}[hb]<br>
-\begin{center}<br>
-\begin{tabular}{c c}<br>
-\hspace{-10pt}</p>
+  <p>\begin{figure}[hb]</p><br>
+\begin{center}</p><br>
+\begin{tabular}{c c}</p><br>
+\hspace{-10pt}</p><br>
 <p1>\begin{minipage}{.50\linewidth}</p1><br>
 <p1>\begin{tikzpicture}</p1><br>
 <p2>\begin{axis}[</p2><br>
