--- a/iFigs.html
+++ b/iFigs.html
@@ -145,13 +145,13 @@ code {
         <p2>\addplot[ybar,bar width=185,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/RTT_histogram.txt};</p2><br>
         <p2>\addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/RTT_kde.txt};</p2><br>
         <p2>\end{axis}</p2><br>
-    \end{tikzpicture}
-\end{minipage}
-\end{tabular}
-\end{center}
-    \caption{Histogram and kernel density estimation (KDE) of synthetic samples for (a) $\mathit{MSS}$ and (b) $\mathit{RTT}$.}
-    \label{fig:synthetic_hist}
-\end{figure} 
+<p1>\end{tikzpicture}</p1><br>
+<p1>\end{minipage}</p1><br>
+<p>\end{tabular}<br>
+\end{center}<br>
+    \caption{Histogram and kernel density estimation (KDE) of synthetic samples for (a) $\mathit{MSS}$ and (b) $\mathit{RTT}$.}<br>
+    \label{fig:synthetic_hist}<br>
+\end{figure}</p>
   
   <p>\end{document}<br>
 </ul>
