--- a/iFigs.html
+++ b/iFigs.html
@@ -97,6 +97,11 @@ code {
 
 <h2> Histograms </h2>
 
+<center>
+<img src="figs/histograms.png" alt="iFigs-Histogrmas" width="800">
+</center>
+
+<h3> LaTeX code </h3>
 <ul class="nav">
   <p> \documentclass{article}<br>
   \usepackage{graphicx}<br>
